--- a/src/app/groups/components/all-groups/all-groups.component.html
+++ b/src/app/groups/components/all-groups/all-groups.component.html
@@ -1,1 +1,14 @@
-<p>all-groups works!</p>
+
+<div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <app-group-card></app-group-card>
+      </div>
+      <div class="col">
+        <app-group-card></app-group-card>
+      </div>
+      <div class="col">
+        <app-group-card></app-group-card>
+      </div>
+    </div>
+  </div>
