--- a/src/app/groups/components/group-menu/group-menu.component.html
+++ b/src/app/groups/components/group-menu/group-menu.component.html
@@ -1,1 +1,33 @@
-<p>group-menu works!</p>
+<div class="container text-center">
+    <div class="row">
+        <div class="col-2">
+            Column
+        </div>
+        <div class="col-8">
+            <app-single-food></app-single-food>
+            <app-single-food></app-single-food>
+            <app-single-food></app-single-food>
+        </div>
+        <div class="col">
+            <h3 class="text-secondary">My Cart</h3>
+            <div class="container" class="border border-primary"  style="margin-top:10px ;">
+                <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-light p-3 rounded-2" tabindex="0">
+                    <h4 id="scrollspyHeading1">Item 1</h4>
+                    <p>...</p>
+                    <hr/>
+                    <h4 id="scrollspyHeading2">Item 2</h4>
+                    <p>...</p>
+                    <hr/>
+                    <h4 id="scrollspyHeading3">Item 3</h4>
+                    <p>...</p>
+                    <hr/>
+                    <h4 id="scrollspyHeading4">Item 4</h4>
+                    <p>...</p>
+                    <hr/>
+                </div>
+            </div>
+            <hr/>
+            <button type="button" class="btn btn-success">Order</button>
+        </div>
+    </div>
+</div>
