--- a/src/app/shared/components/header/header/header.component.html
+++ b/src/app/shared/components/header/header/header.component.html
@@ -1,25 +1,27 @@
-
-
-
 <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="auth/login" >Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="auth/signup">SignUp</a>
-          </li>
-        </ul>
-            <button class="btn btn-outline-success" type="submit">LogOut </button>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link " aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " aria-current="page" [routerLink]="['/group']"
+            routerLinkActive="router-link-active">Groups</a>
+        </li>
+        <li class="nav-item">
+          <a class="btn btn-outline-success" aria-current="page" [routerLink]="['/group/create']"
+            routerLinkActive="router-link-active">Create Groups</a>
+        </li>
+      </ul>
+        <a class="btn btn-outline-primary" routerLink="auth/login">Login</a>
+        <a class="btn btn-outline-primary" routerLink="auth/signup">SignUp</a>
+      <button class="btn btn-outline-danger" type="submit">LogOut </button>
     </div>
-  </nav>
+  </div>
+</nav>
