--- a/src/app/groups/components/group-menu/group-menu.component.html
+++ b/src/app/groups/components/group-menu/group-menu.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center " style="margin-top: 15px; margin-bottom: 10px ;padding: 10px;">
     <div class="row">
         <div class="col-2">
             Column
@@ -27,7 +27,10 @@
                 </div>
             </div>
             <hr/>
-            <button type="button" class="btn btn-success">Order</button>
+            <div>
+                <button type="button" class="btn btn-success">Order</button>
+                <button type="button" class="btn btn-secondary" style="margin-left:2px;" (click)="viewGroupOrder()">View Order</button>
+            </div>
         </div>
     </div>
 </div>
