--- a/src/app/groups/components/single-food/single-food.component.html
+++ b/src/app/groups/components/single-food/single-food.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="margin-top: 10px;">
+<div class="card">
     <div class="card-body">
         <h5 class="card-title">Name of food</h5>
         <p class="card-text">Descrpiont</p>
