--- a/src/app/groups/components/all-groups/all-groups.component.html
+++ b/src/app/groups/components/all-groups/all-groups.component.html
@@ -1,5 +1,5 @@
 
-<div class="container text-center">
+<div class="container text-center"style="margin-top:10px ;">
     <div class="row">
       <div class="col">
         <app-group-card></app-group-card>
