--- a/src/app/groups/components/group-card/group-card.component.html
+++ b/src/app/groups/components/group-card/group-card.component.html
@@ -1,8 +1,9 @@
 <div class="card" style="width: 18rem;">
     <div class="card-body">
-      <h5 class="card-title">Name of Restaurant</h5>
+      <h5 class="card-title">{{group.restaurant.name}}</h5>
       <hr/>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a routerLink="group-menu" *ngIf="loggedIn()" class="btn btn-primary">Join Group</a>
+      <a [routerLink]="['group-menu',group.id]" *ngIf="loggedIn()"  class="btn btn-primary">Join Group</a>
     </div>
   </div>
+  
