--- a/src/app/groups/components/group-menu/group-menu.component.html
+++ b/src/app/groups/components/group-menu/group-menu.component.html
@@ -1,35 +1,28 @@
 <div class="container text-center " style="margin-top: 15px; margin-bottom: 10px ;padding: 10px;">
     <div class="row">
-        <div class="col-2">
+        <div class="col">
             Column
         </div>
         <div class="col-8">
-            <app-single-food></app-single-food>
-            <app-single-food></app-single-food>
-            <app-single-food></app-single-food>
+            <div *ngFor="let food of foods" style="margin-top: 10px;">
+                <app-single-food [food]="food"></app-single-food>
+            </div>
         </div>
         <div class="col">
             <h3 class="text-secondary">My Cart</h3>
-            <div class="container" class="border border-primary"  style="margin-top:10px ;">
-                <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-light p-3 rounded-2" tabindex="0">
+            <div class="container" class="border border-primary" style="margin-top:10px ;">
+                <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%"
+                    data-bs-smooth-scroll="true" class="scrollspy-example bg-light p-3 rounded-2" tabindex="0">
                     <h4 id="scrollspyHeading1">Item 1</h4>
                     <p>...</p>
-                    <hr/>
-                    <h4 id="scrollspyHeading2">Item 2</h4>
-                    <p>...</p>
-                    <hr/>
-                    <h4 id="scrollspyHeading3">Item 3</h4>
-                    <p>...</p>
-                    <hr/>
-                    <h4 id="scrollspyHeading4">Item 4</h4>
-                    <p>...</p>
-                    <hr/>
+                    <hr />
                 </div>
             </div>
-            <hr/>
+            <hr />
             <div>
                 <button type="button" class="btn btn-success">Order</button>
-                <button type="button" class="btn btn-secondary" style="margin-left:2px;" (click)="viewGroupOrder()">View Order</button>
+                <button type="button" class="btn btn-secondary" style="margin-left:2px;" (click)="viewGroupOrder()">View
+                    Order</button>
             </div>
         </div>
     </div>
