--- a/src/app/groups/components/group-menu/group-menu.component.html
+++ b/src/app/groups/components/group-menu/group-menu.component.html
@@ -8,7 +8,18 @@
                     <div class="row">
                         <div class="col">{{user.name}}</div>
                         <div class="col"><button type="button"(click)="acceptUser(user.id)" class="btn btn-primary">Ok</button></div>
-                    </div> 
+                    </div>
+                </li>
+                <br>
+                <hr>
+                <br>
+                <li class="list-group-item disabled" style="background-color: #0d6efd;color:white;"
+                aria-disabled="true">group users</li>
+                <li class="list-group-item" *ngFor="let user of group_users">
+                    <div class="row">
+                        <div class="col">{{user.name}}</div>
+                        <!-- <div class="col"><button type="button"(click)="acceptUser(user.id)" class="btn btn-primary">Ok</button></div> -->
+                    </div>
                 </li>
 
             </ul>
