--- a/src/app/groups/components/group-order/group-order.component.html
+++ b/src/app/groups/components/group-order/group-order.component.html
@@ -1,7 +1,11 @@
 <div class="container mb-2">
-<app-single-order></app-single-order>
-<button class="btn btn-success" style="margin-right:10px;">Order All</button>
+    <select class="form-control m-2"(change)="detectChanges($event)" >
+    <option value="users">Per User</option>
+    <option value="items"> Per Item</option>
+</select>
 <button class="btn btn-success">Finish</button>
+<app-single-order *ngIf="summary == 'users'"></app-single-order>
+<app-order-summary *ngIf="summary == 'items'"></app-order-summary>
 
 </div>
 
