--- a/src/app/groups/components/all-groups/all-groups.component.html
+++ b/src/app/groups/components/all-groups/all-groups.component.html
@@ -1,6 +1,35 @@
 
-<div class="container text-center"style="margin-top:10px ;">
-    <div class="row">
+<div class="container text-center">
+  <div class="row" style="filter: brightness(0.5);">
+  <div id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://media.istockphoto.com/id/1054319798/photo/group-of-happy-friends-having-breakfast-in-the-restaurant.jpg?b=1&s=170667a&w=0&k=20&c=hKFFwRlCivAJJ8-0YWLsZJjtTyMvwmB7xUoIaWvHKHg=" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://media.istockphoto.com/id/1142843092/photo/so-delicious.jpg?s=612x612&w=0&k=20&c=_BV3VCyNyMZQlR3I21oixM0Xbh42nSfHOhl6Bi_kAHY=" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://media.istockphoto.com/id/866925440/photo/group-of-happy-friends-toasting-while-eating-at-dining-table.jpg?s=612x612&w=0&k=20&c=nhY_xXl1Dj4KOkyj5loDH8p_QS2QfwC_FLhuy3qUPWE=" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+    
+  </div>
+</div>
+    <div class="row" style="padding-top: 10px;">
       <div class="col" *ngFor="let group of groups">
         <app-group-card [group] ="group"></app-group-card>
       </div>
