--- a/src/app/shared/components/header/header/header.component.scss
+++ b/src/app/shared/components/header/header/header.component.scss
@@ -1,4 +1,11 @@
 .btn {
     padding: .55rem 1.5rem .45rem;
   }
-
+  .nav-link{
+    color: white;
+    font-weight: bold;
+  }
+a.nav-link:hover{
+  color: black;
+  background-color: aliceblue;
+}
