develop Ui and work finfsh

--- a/src/app/groups/components/all-groups/all-groups.component.html
+++ b/src/app/groups/components/all-groups/all-groups.component.html
@@ -34,4 +34,31 @@
         <app-group-card [group] ="group"></app-group-card>
       </div>
     </div>
+    <div *ngIf="wating" style="text-align: center;">
+      <div>The data is loading...</div>
+      <div class="spinner-grow text-primary" role="status">
+          <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-secondary" role="status">
+          <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-success" role="status">
+          <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-danger" role="status">
+          <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-warning" role="status">
+          <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-info" role="status">
+          <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-light" role="status">
+          <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-dark" role="status">
+          <span class="visually-hidden">Loading...</span>
+      </div>
+  </div>
   </div>
